--- a/bin/src/main/resources/templates/modules/header.html
+++ b/bin/src/main/resources/templates/modules/header.html
@@ -8,7 +8,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-				    <a class="nav-link active" th:href="@{/}">Requisição</a>
+				    <a class="nav-link active" href="#">Requisição</a>
 				</li>	
 				<li class="nav-item">
 				    <a class="nav-link {{ Request::is('admin*') ? 'active' : '' }}" th:href="@{/admin/}">Admin</a>
@@ -20,7 +20,7 @@
 				    <a class="nav-link {{ Request::is('admin*') ? 'active' : '' }}" th:href="@{/estoquista}">Estoquistas</a>
 				</li>
 				<li class="nav-item">
-				    <a class="nav-link {{ Request::is('admin*') ? 'active' : '' }}" th:href="@{/minhasRequisicoes}">Minhas requisições</a>
+				    <a class="nav-link {{ Request::is('admin*') ? 'active' : '' }}" th:href="@{/requisicoes}">Minhas requisicoes</a>
 				</li>
 			</ul>
  		</div>
