--- a/src/main/resources/templates/root/estoquePage.html
+++ b/src/main/resources/templates/root/estoquePage.html
@@ -7,6 +7,16 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div><p>Página de estoque de materiais</p></div>
+    <div class="container mt-5">
+        <div th:replace="~{modules/header :: header}"></div>
+
+        <p>Pagina de mostrar estoque</p>
+    </div>
+    <div th:replace="~{modules/footer :: footer}"></div>
+    <!-- Adicione o link do Bootstrap JS e o jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script th:src="@{/js/requisicao.js}"></script>
 </body>
 </html>
