--- a/src/main/resources/templates/root/minhasRequisicoesPage.html
+++ b/src/main/resources/templates/root/minhasRequisicoesPage.html
@@ -1,1 +1,22 @@
-Pagina para requisicoes pendentes
+<!DOCTYPE html>
+<html lang="pt-BR" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página de requisicoes</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="container mt-5">
+        <div th:replace="~{modules/header :: header}"></div>
+
+        <p>Pagina para mostrar minhas requisicoes</p>
+    </div>
+    <div th:replace="~{modules/footer :: footer}"></div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script th:src="@{/js/requisicao.js}"></script>
+</body>
+</html>
