--- a/src/main/resources/templates/root/requisicaoPage.html
+++ b/src/main/resources/templates/root/requisicaoPage.html
@@ -7,7 +7,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 	<script th:inline="javascript">
 		/*<![CDATA[*/
-        var siglaList = /*[[${estoqueList}]]*/ [];
+        var estoqueList = /*[[${estoqueList}]]*/ [];
         /*]]>*/
 	</script>
 </head>
@@ -56,9 +56,7 @@
 			</div>
 
 			<div class="form-row mb-3">
-				<div class="col">
-					<input class="form-control" placeholder="Sigla" id="sigla" type="text" name="materiais[0].sigla" required>
-				</div>
+				<div class="col"><input class="form-control" placeholder="Sigla" id="sigla" type="text" name="materiais[0].sigla" required></div>
 				<div class="col">
 					<select type="text" class="form-control" id="tipoMaterialSelect" name="materiais[0].tipoMaterial" required>
 						<option value="ELETRICO">Elétrico</option>
